# term-big-3-eth

./: CMakeLists.txt  README.md  bootloader  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  EEPROM.cpp  EEPROM.h  Font5x8.h  Kconfig.projbuild  SSD1306.cpp  SSD1306.h  UserSettings.h  WString.h  esp32_saric_mqtt_network.cpp  esp32_saric_mqtt_network.h  esp32_saric_tds_function.cpp  esp32_saric_tds_function.h  esp32_saric_virtual-outputs.cpp  esp32_saric_virtual-outputs.h  ezButton.cpp  ezButton.h  main.cpp  main.h  menu-outputs.cpp  menu-outputs.h  menu.cpp  menu.h  ow.cpp  ow.h  saric_ds2482.cpp  saric_ds2482.h  saric_metrics.cpp  saric_metrics.h  saric_rtds_function.cpp  saric_rtds_function.h  saric_utils.h  saric_utils_esp32.cpp  saric_utils_esp32.h  saric_virtual_outputs.cpp  saric_virtual_outputs.h  stdlib_noniso.c  stdlib_noniso.h
